fix for pres Granelli

--- a/abstract.tex
+++ b/abstract.tex
@@ -12,8 +12,8 @@ This thesis project was carried out at U-Hopper during my external internship. T
 
 I worked a lot on the data collection part, implementing a code on a Raspberry Pi that allowed to detect particular frames for the connection management from all Wi-Fi packets, i.e. the probe request frames from which it was possible to extract information useful for processing, ensuring the privacy of its customers by anonymizing the MAC address.
 
-Much of the processing that is done on the data to get people estimates has been designed to run on a server. By developing a code for cleaning the collected data I was able to detect the number of devices present at all times in the vicinity of the Raspberry Pi. Subsequently, through a part of machine learning, properly calibrated with the ground truth that I collected manually, i.e. the real number of people, I was able to estimate the number of people present.
+Much of the processing that is done on the data to get people estimates has been designed to run on a cloud infrastructure. By developing a code for cleaning the collected data I was able to detect the number of devices present at all times in the vicinity of the Raspberry Pi. Subsequently, through a part of machine learning, properly calibrated with the ground truth that I collected manually, i.e. the real number of people, I was able to estimate the number of people present.
 
-In order to connect these two parts I used the MQTT communication protocol, versatile and scalable, and I developed the whole part for data transmission with an MQTT client on the Raspberry Pi and another one on the server. Also on the server, in this case the U-Hopper one was used, an MQTT broker was executed to forward the data to the receiver client and a database for the storage of the data received by the Raspberry Pi on which it is then possible to carry out the analysis.
+In order to connect these two parts I used the MQTT communication protocol, versatile and scalable, and I developed the whole part for data transmission with an MQTT client on the Raspberry Pi and another one on the cloud infrastructure. Also on the cloud infrastructure, in this case the U-Hopper one was used, an MQTT broker was executed to forward the data to the receiver client and a database for the storage of the data received by the Raspberry Pi on which it is then possible to carry out the analysis.
 
 The functioning of this system was initially tested at home, due to the restrictions imposed on people on their personal mobility, and subsequently validated in a place of social interest with a certain dynamism, a cafe, once the restrictions ceased. The results obtained at the end of processing, adequately compared with manually-collected ground truth, are in line with initial expectations. In conclusion, the system provides a good estimate of the number of people present with a mean absolute error of less than two people. This was possible mainly thanks to a careful calibration of the machine learning model, which was initially developed by U-Hopper's colleagues for another project, which I perfected in order to conduct my analyzes and obtain the desired results.
