--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -14,6 +14,10 @@
 
 \emph{ Thanks to all my friends and classmates, who have supported me during these three years. }
 
-\emph{ Thanks to my supervisors and the owner of the cafe where I conducted the validation, who made possible this thesis and the validation of the system. }
+\emph{ Thanks to my supervisors and the owner of the cafe where I conducted the validation, who made }
 
-\emph{ Thanks to all the U-Hopper team and the other interns for the support and the beautiful internship, although it was mainly done from home. }
+\emph{ possible this thesis and the validation of the system. }
+
+\emph{ Thanks to all the U-Hopper team and the other interns for the support and the beautiful internship, }
+
+\emph{ although it was mainly done from home. }
