--- a/conclusions.tex
+++ b/conclusions.tex
@@ -12,7 +12,7 @@ This chapter reports the conclusions and summary of the work done. At the end of
 Summary of the work done:
 \begin{itemize}
   \item It is possible to continuously estimate the density of the crowd in a place of interest based on the Wi-Fi probe request frames.
-  \item Designed and developed a reliable system to do that.
+  \item Designed and implemented a reliable system to do that.
   \item Tested the system in a Cafe and collected 4 weeks of data and manually-annotated ground truth with an overall MAE of 1.731.
 \end{itemize}
 
