--- a/implementation.tex
+++ b/implementation.tex
@@ -37,7 +37,7 @@ I developed two scripts to manage the ground truth. One for collecting the groun
 The other script is used to load the collected ground truth in the MongoDB using PyMongo MongoClient for accessing the database and storing data.
 
 
-\section{cloud infrastructure implementation}
+\section{Cloud infrastructure implementation}
 \label{sec:cloudinfrastructure}
 \vspace{0.2 cm} 
 
